crates/vlc-http/tests/snapshots/test_cases__case@action-playback-mode-repeat-one.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/action-playback-mode-repeat-one.txt
---
[
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json",
  ), Model()),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_repeat",
  ), Model(
    is_repeat_one: true,
  )),
]
