crates/vlc-http/tests/snapshots/test_cases__case@action-playlist-set-empty.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/action-playlist-set-empty.txt
---
[
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json",
  ), Model()),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json",
  ), Model()),
]
