crates/vlc-http/tests/snapshots/test_cases__case@action-playlist-set-mid01.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/action-playlist-set-mid01.txt
---
[
  Harness(Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_play&id=3",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
    current_item_id: Some((3, Playing)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
    current_item_id: Some((3, Playing)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
    current_item_id: Some((3, Playing)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2F%2Fnew1",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
      5: "file:///new1",
    },
    current_item_id: Some((3, Playing)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2F%2Fnew2",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
      5: "file:///new1",
      6: "file:///new2",
    },
    current_item_id: Some((3, Playing)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2F%2Fnew3",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
      5: "file:///new1",
      6: "file:///new2",
      7: "file:///new3",
    },
    current_item_id: Some((3, Playing)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=pl_delete&id=4",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      5: "file:///new1",
      6: "file:///new2",
      7: "file:///new3",
    },
    current_item_id: Some((3, Playing)),
  )),
]
