crates/vlc-http/tests/snapshots/test_cases__case@action-playlist-set-new01-mode.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/action-playlist-set-new01-mode.txt
---
[
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json",
  ), Model()),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_random",
  ), Model(
    is_random: true,
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_repeat",
  ), Model(
    is_repeat_one: true,
    is_random: true,
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json",
  ), Model(
    is_repeat_one: true,
    is_random: true,
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_random",
  ), Model(
    is_repeat_one: true,
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_repeat",
  ), Model()),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json",
  ), Model()),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2Fa%2F",
  ), Model(
    items: {
      0: "file://a/",
    },
  )),
]
