crates/vlc-http/tests/snapshots/test_cases__case@action-playlist-set-new01.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/action-playlist-set-new01.txt
---
[
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json",
  ), Model()),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json",
  ), Model()),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2Fa%2F",
  ), Model(
    items: {
      0: "file://a/",
    },
  )),
]
