crates/vlc-http/tests/snapshots/test_cases__case@command-playback-pause-resume-01.txt.snap
---
source: vlc-http/tests/test_cases.rs
expression: output
input_file: vlc-http/tests/inputs/command-playback-pause-resume-01.txt
---
[
  Harness(Model(
    items: {
      0: "file:///a",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_play&id=0",
  ), Model(
    items: {
      0: "file:///a",
    },
    current_item_id: Some((0, Playing)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_forcepause",
  ), Model(
    items: {
      0: "file:///a",
    },
    current_item_id: Some((0, Paused)),
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_forceresume",
  ), Model(
    items: {
      0: "file:///a",
    },
    current_item_id: Some((0, Playing)),
  )),
]
